# substrate-scaffold

./: .gitignore  LICENSE  README.md
infra/: Pipfile  README.md  config.yml  dockinfra.py  requirements.txt  setup.py  ssh_setup.py
infra/docs/: security_group.md
install/: download_run_dir.bash  upload_run_dir.bash
run/: run.py  run_config.yml
vasaplatsen/: .gitignore  Cargo.toml  rebuild  ui-types.json
vasaplatsen/runtime/: Cargo.toml
vasaplatsen/runtime/src/: lib.rs
vasaplatsen/runtime/src/revocable_anchors/: fromalt.rs  hasher.rs  merkle.rs  mod.rs
vasaplatsen/src/: chain_spec.rs  service.rs
