[package]
authors = ["Anonymous"]
edition = "2018"
name = "vasaplatsen-runtime"
version = "2.0.0"

[dependencies.aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-aura"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-balances"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-grandpa"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.indices]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-indices"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-randomness-collective-flip"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "0.8"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "6e0a4877afbe2309e106"
package = "pallet-sudo"
version = "2.0.0"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-transaction-payment"
rev = "6e0a4877afbe2309e106"
version = "2.0.0"

[dependencies.blake2]
default-features = false
version = '0.8.1'

[dependencies.derivative]
version = "1.0.3"
features = ["use_core"]

[dev-dependencies.hex-literal]
default-features = false
version = "0.2.1"

[dev-dependencies.rand]
default-features = false
version = "0.7.3"

[dev-dependencies.sha2]
default-features = false
version = '0.8.1'

[build-dependencies.wasm-builder-runner]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "substrate-wasm-builder-runner"
rev = "6e0a4877afbe2309e106"
version = "1.0.4"

[features]
default = ["std"]
std = ["aura/std", "balances/std", "codec/std", "frame-executive/std", "frame-support/std", "grandpa/std", "indices/std", "randomness-collective-flip/std", "safe-mix/std", "serde", "sp-api/std", "sp-block-builder/std", "sp-consensus-aura/std", "sp-core/std", "sp-inherents/std", "sp-io/std", "sp-offchain/std", "sp-runtime/std", "sp-session/std", "sp-std/std", "sp-transaction-pool/std", "sp-version/std", "system/std", "timestamp/std", "transaction-payment/std", "sudo/std"]
